--- a/config/settings.example.yml
+++ b/config/settings.example.yml
@@ -1,3 +1,9 @@
 locations:
   staging: /path/to/staging/area
   completed: /path/to/completed/results/area
+email_smtp:
+  address: smtp.google.com
+  port: 587
+  domain: mail.gmail.com
+  user_name: mr_test@gmail.com
+  password: password
